--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "typescript": ">=2.0"
   },
   "dependencies": {
-    "@stoqey/ib": "1.2.13",
+    "@stoqey/ib": "^1.2.27",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.20",
